chore: 移除个人信息文件并添加通用示例
- 删除包含个人信息的demo和test文件
- 添加通用的examples目录和示例文件
- 更新.gitignore文件，防止个人信息文件被提交
- 添加会话文件和临时文件的忽略规则

--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,28 @@ __pycache__/*
 *.egg-info
 dist
 sp-session.pkl
+
+# 会话文件
+*.pkl
+*-session.pkl
+
+# 个人信息文件
+*personal*
+*test*
+*demo*
+*example*
+
+# 临时文件
+*.tmp
+*.temp
+*.log
+
+# IDE文件
+.vscode/
+.idea/
+*.swp
+*.swo
+
+# 系统文件
+.DS_Store
+Thumbs.db
